@startuml
title 聊天系统 - 核心实体类

' 引入枚举依赖（实际渲染时需确保enum_types.puml已加载）
!include enum_types.puml

class User {
    + userId: String  // 唯一标识（UUID）
    + userName: String  // 用户名
    + avatarUrl: String  // 头像OSS路径
    + password: String  // 加密存储
    + lastReadTs: Long  // 上次拉取消息时间戳（热点）
    + loginStatus: Boolean  // 在线状态
    + login(credential: Map): Boolean
    + logout(): Boolean
    + updateLastReadTs(ts: Long): Boolean
    + updateAvatar(ossPath: String): Boolean
}

class Media {
    + mediaId: String  // 多媒体唯一标识
    + mediaType: MediaType  // 图片/视频
    + ossPath: String  // OSS存储路径
    + size: Long  // 大小（字节）
    + duration: Long  // 视频时长（秒）
    + width: Int  // 宽（像素）
    + height: Int  // 高（像素）
}

class Message {
    + msgId: String  // 消息唯一标识
    + senderId: String  // 发送者ID（关联User）
    + receiverType: MsgReceiverType  // 接收类型
    + receiverId: String  // 接收者ID（用户/群）
    + textContent: String  // 文字内容
    + mediaList: List<Media>  // 多图/多视频
    + sendTs: Long  // 发送时间戳
    + isUnread: Boolean  // 未读状态
    + isRecalled: Boolean  // 是否撤回
    + markAsRead(): Boolean
    + addMedia(media: Media): Boolean
    + recall(): Boolean
}

class Group {
    + groupId: String  // 群唯一标识
    + groupName: String  // 群名称
    + groupAvatar: String  // 群头像OSS路径
    + maxMemberCount: Int  // 最大人数
    + currentMemberCount: Int  // 当前人数
    + isPublic: Boolean  // 是否公开
    + welcomeMsg: String  // 入群欢迎语
    + createTs: Long  // 创建时间
    + creatorId: String  // 群主ID（关联User）
    + addMember(member: GroupMember, operatorId: String): Boolean
    + removeMember(memberId: String, operatorId: String): Boolean
    + modifyGroupInfo(info: Map, operatorId: String): Boolean
    + muteMember(memberId: String, operatorId: String, duration: Long): Boolean
}

class GroupMember {
    + userId: String  // 关联User.userId
    + groupId: String  // 关联Group.groupId ,同userid联合作为唯一标识
    + role: GroupRole  // 成员角色
    + joinTs: Long  // 加入时间
    + isMuted: Boolean  // 是否被禁言
    + muteEndTs: Long  // 禁言结束时间
    + hasPermission(perm: GroupPermission): Boolean
    + updateRole(newRole: GroupRole, operatorId: String): Boolean
}

' 实体间关系
User "1" -- "*" GroupMember: 加入（一个用户多个群）
Message "1" -- "*" Media: 包含（一条消息多个多媒体）
Group "1" -- "*" GroupMember: 包含（一个群多个成员）

@enduml